--- a/package.json
+++ b/package.json
@@ -49,8 +49,12 @@
     "webpackbar": "^4.0.0"
   },
   "dependencies": {
+    "axios": "^0.19.2",
     "basiclightbox": "^5.0.3",
     "core-js": "^3.6.4",
-    "handlebars": "^4.7.3"
+    "debounce": "^1.2.0",
+    "handlebars": "^4.7.3",
+    "lodash.debounce": "^4.0.8",
+    "pnotify": "^4.0.1"
   }
 }
